<resources>
    <string name="app_name">abbassample</string>
    <string name="create_account">Create Account</string>
    <string name="create_an_account_so_you_can_explore_all_the_existing_jobs">Create an account so you can explore all the existing jobs</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="google">google</string>
    <string name="abbas">abbas</string>
    <string name="ilgar_muellim">Ilgar muellim</string>
    <string name="penah">Penah</string>
    <string name="huseyn">Huseyn</string>
    <string name="add">add</string>
    <string name="cixma">cixma</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="input1">input1</string>
    <string name="input2">input2</string>
    <string name="_22">22</string>
    <string name="back">Back</string>
    <string name="google1">Google</string>
    <string name="facebook1">Facebook</string>
    <string name="apple">Apple</string>
    <string name="account_created">Account Created</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="account">Account</string>
    <string name="competition">Competition</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notes">Notes</string>
    <string name="order_1524">Order #1524</string>
    <string name="step_1_registration">Step 1.Registration</string>
    <string name="e_mail">E-mail</string>
    <string name="enter_email_adress">Enter email adress</string>
    <string name="send_code">Send code</string>
    <string name="step_2_email_verification">Step 2. Email verification</string>
    <string name="verification_code">Verification code</string>
    <string name="enter_here">Enter here</string>
    <string name="step_3_create_new_password">Step 3. Create new password</string>
    <string name="set_password">Set password</string>
    <string name="set_a_password">Set a password</string>
    <string name="minimum_8_symbol">Minimum 8 symbol</string>
    <string name="repeat_password">Repeat password</string>
    <string name="name">Name</string>
    <string name="enter_name_here">Enter name here</string>
    <string name="surname">Surname</string>
    <string name="enter_surname_here">Enter surname here</string>
    <string name="gender">Gender</string>
    <string name="select_gender">Select Gender</string>
    <string name="subtotal_110">Subtotal: $110</string>
    <string name="please_select_gender">Please select gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="complete">Complete</string>
    <string name="save">Save</string>
    <string name="azn">azn</string>
    <string name="usd">usd</string>
    <string name="convert">convert</string>
    <string name="my_order">My Order</string>
    <string name="alert">alert</string>
    <string name="go_to_list">Go To List</string>
</resources>