<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".homework25.Lesson25Step1Fragment">


    <TextView
        android:id="@+id/step1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/step_1_registration"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/entername"
        app:layout_constraintTop_toBottomOf="@id/step1"
        android:text="@string/e_mail"
        android:textColor="#777777"
        android:layout_marginTop="15dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/entername"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/enter_email_adress"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailtext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/send_code"
        app:cornerRadius="10dp"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="#111111"/>

</androidx.constraintlayout.widget.ConstraintLayout>