<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".homework23.Step4Fragment">
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        app:icon="@drawable/baseline_arrow_back_24"
        app:iconTint="@color/black"
        android:backgroundTint="@color/white"/>

    <TextView
        android:id="@+id/step1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/step_3_create_new_password"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/entername"
        app:layout_constraintTop_toBottomOf="@id/step1"
        android:text="@string/name"
        android:textColor="#777777"
        android:layout_marginTop="15dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/entername"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/enter_name_here"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/entername1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:id="@+id/surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/entername"
        app:layout_constraintTop_toBottomOf="@id/entername"
        android:text="@string/surname"
        android:textColor="#777777"
        android:layout_marginTop="15dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/surnamehere"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surname"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/enter_surname_here"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/entersurname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/Gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/entername"
        app:layout_constraintTop_toBottomOf="@id/surnamehere"
        android:text="@string/gender"
        android:textColor="#777777"
        android:layout_marginTop="15dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/SelectGender"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Gender"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/select_gender"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/entergender"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="Continue"
        app:cornerRadius="10dp"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="#111111"
        android:layout_marginBottom="30dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>