<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/abbas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/abbas"/>

        <RadioButton
            android:id="@+id/IlgarMuellim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/abbas"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"
            android:text="@string/ilgar_muellim"/>

        <RadioButton
            android:id="@+id/Penah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/IlgarMuellim"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"
            android:text="@string/penah"/>
        <RadioButton
            android:id="@+id/huseyn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/Penah"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"
            android:text="@string/huseyn"/>

    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        />





</androidx.constraintlayout.widget.ConstraintLayout>