<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cornerRadius="10dp"
        android:paddingVertical="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:text="@string/add"
        android:backgroundTint="#1F41BB" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cornerRadius="10dp"
        android:paddingVertical="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add"
        android:layout_margin="20dp"
        android:text="@string/cixma"
        android:backgroundTint="#1F41BB" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Input1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textColorHint="#5C5A5A">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Input1Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/input1"
            android:background="#F1F4FF"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Input2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/Input1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textColorHint="#5C5A5A">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Input2Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/input2"
            android:background="#F1F4FF"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        android:id="@+id/Netice"
        android:text="@string/_22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Input2"/>


</androidx.constraintlayout.widget.ConstraintLayout>