<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#3F51B5"
        android:layout_marginTop="90dp"
        android:textSize="30sp"
        android:text="@string/create_account"/>

    <TextView
        android:id="@+id/existing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account_so_you_can_explore_all_the_existing_jobs"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/createAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginTop="12dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/existing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textColorHint="#5C5A5A">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="20dp"
            android:hint="@string/email"
            android:background="#F1F4FF"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Password"

        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:layout_marginTop="20dp"
        android:textColorHint="#5C5A5A"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/password"
            android:background="#F1F4FF"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPassword"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Password"
        android:layout_marginTop="20dp"
        android:textColorHint="#5C5A5A"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/confirm_password"
            android:background="#F1F4FF"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cornerRadius="10dp"
        android:paddingVertical="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPassword"
        android:layout_margin="20dp"
        android:text="@string/sign_up"
        android:backgroundTint="#1F41BB" />

    <TextView
        android:id="@+id/already"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button"
        android:layout_margin="20dp"
        android:text="@string/already_have_an_account"
        android:gravity="center"
        android:textColor="#494949"/>

    <TextView
        android:id="@+id/or"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/already"
        android:text="@string/or_continue_with"
        android:layout_marginTop="40dp"
        android:textColor="#1F41BB"
        android:gravity="center"/>



        <ImageButton
            android:id="@+id/google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/or"
            app:layout_constraintEnd_toStartOf="@id/facebook"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/google"
            android:background="@color/white"

            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginHorizontal="5dp"
            android:src="@drawable/google" />

        <ImageButton
            android:id="@+id/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/google"
            app:layout_constraintTop_toTopOf="@id/google"
            app:layout_constraintEnd_toStartOf="@id/apple"
            android:contentDescription="@string/google"
            android:layout_marginHorizontal="5dp"
            android:background="@color/white"
            android:src="@drawable/facebook" />

        <ImageButton
            android:id="@+id/apple"
            android:background="@color/white"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toEndOf="@id/facebook"
            app:layout_constraintTop_toTopOf="@id/google"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:contentDescription="@string/google"
            android:src="@drawable/apple"/>


</androidx.constraintlayout.widget.ConstraintLayout>